--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "static-food-delivery-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-   "type": "module",
+  "description": "Deploy JSON Server to Vercel",
+  "main": "api/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch db.json --port 5000"
+    "start": "json-server --watch db.json"
   },
   "dependencies": {
     "json-server": "^0.16.3"
@@ -14,7 +12,5 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-beta.0"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
